@@ -6,6 +6,7 @@ Revision history for Perl extension Parse-CPAN-Meta
 	- Merging a ton more tests from YAML::Tiny
 	- Added back some pointless options to yaml_ok that keep our
 	  codebase closer to YAML::Tiny (which should help with syncing)
+	- Changed exceptions to be closer to YAML::Tiny
 
 0.05 Wed 11 Mar 2009
 	- Upgrade previous release to a stable release.
